--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,7 +13,10 @@
         android:roundIcon="@drawable/logo_start"
         android:supportsRtl="true"
         android:theme="@style/Theme.LangHexx"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".View.ProfileDetail"
+            android:exported="false" />
         <activity
             android:name=".View.StartActivity"
             android:exported="false" />
@@ -22,7 +25,7 @@
             android:exported="false" />
         <activity
             android:name=".View.MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
