--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,6 @@ plugins {
     id 'com.android.library' version '8.0.1' apply false
     // add the dependency for the google services
     id 'com.google.gms.google-services' version '4.4.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.22' apply false
 }
+
